update + not fully implemented BoardIntegrationTest